# AudioTranscript0

./: README.md  app.py  audio_splitter.py  chatgpt_transcribe.py  chatgpt_transcribe_sample.py  extract_and_transcribe.py  file_utils.py  gunicorn_config.py  openai_transcribe_segment.py  pyproject.toml  quick_extract_and_transcribe.py  quick_transcribe.py  quick_transcribe_sample.py  sample_transcription_900to905.txt  speech_recognition_fallback.py  test_transcribe.py  text_analysis.py  transcription.py  transcription_15min_5sec.txt
static/css/: custom.css
static/js/: main.js
templates/: attached_files.html  direct_transcribe.html  extract.html  index.html  layout.html  results.html
