[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "openai>=1.69.0",
    "pocketsphinx>=5.0.4",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "speechrecognition>=3.14.2",
    "webrtcvad>=2.0.10",
    "werkzeug>=3.1.3",
]
